adicionado listar edificios ao front-end

--- a/ui2/src/app/component/edificio/edificio-geral/edificio-geral.component.html
+++ b/ui2/src/app/component/edificio/edificio-geral/edificio-geral.component.html
@@ -1,7 +1,8 @@
 <h1>Edificios</h1>
 <nav>
     <a routerLink="/edificioCreate">Edificio Create</a> 
-    
+    <a routerLink="/edificioList">List Edificios</a> 
+
 </nav>
 <button class ="buttonBack" (click) = "goBack()">Back</button>
 <router-outlet></router-outlet>
