adciionado front-end do update edificio

--- a/ui2/src/app/component/edificio/edificio-geral/edificio-geral.component.html
+++ b/ui2/src/app/component/edificio/edificio-geral/edificio-geral.component.html
@@ -2,6 +2,8 @@
 <nav>
     <a routerLink="/edificioCreate">Edificio Create</a> 
     <a routerLink="/edificioList">List Edificios</a> 
+    <a routerLink="/edificioUpdate">Edificio Update</a> 
+
 
 </nav>
 <button class ="buttonBack" (click) = "goBack()">Back</button>
