--- a/ui2/src/app/component/appcomponent/app.component.html
+++ b/ui2/src/app/component/appcomponent/app.component.html
@@ -1,5 +1,20 @@
-<h1>WORK IN PROGRESS</h1>
-<app-edificio-geral></app-edificio-geral>
-<router-outlet></router-outlet>
-<app-messages></app-messages>
+<h1>RobDroneGO</h1>
 
+<button (click)="openAdmin()">Menu Admin</button>
+<button (click)="openGestorCampus()">Menu Gestor Campus</button>
+<button (click)="openGestorFrota()">Menu Gestor Frota</button>
+
+<ng-container *ngIf="selectedMenu === 'admin'">
+    <router-outlet></router-outlet>
+    <app-messages></app-messages>
+</ng-container>
+
+<ng-container *ngIf="selectedMenu === 'gestor-Campus'">
+    <router-outlet></router-outlet>
+    <app-messages></app-messages>
+</ng-container>
+
+<ng-container *ngIf="selectedMenu === 'gestor-Frota'">
+    <router-outlet></router-outlet>
+    <app-messages></app-messages>
+</ng-container>
