adicionado front-end para tarefa e tipoRobo

--- a/ui2/src/app/component/appcomponent/app.component.html
+++ b/ui2/src/app/component/appcomponent/app.component.html
@@ -17,4 +17,6 @@
 <ng-container *ngIf="selectedMenu === 'gestor-Frota'">
     <router-outlet></router-outlet>
     <app-messages></app-messages>
+
+<app-tipo-robo-list></app-tipo-robo-list>
 </ng-container>
