--- a/ui2/src/app/component/appcomponent/app.component.html
+++ b/ui2/src/app/component/appcomponent/app.component.html
@@ -18,5 +18,7 @@
     <router-outlet></router-outlet>
     <app-messages></app-messages>
 
-<app-tipo-robo-list></app-tipo-robo-list>
+<app-robo-create></app-robo-create>
+
+<app-robo-list></app-robo-list>
 </ng-container>
