adicionado inibir robo ao front-end

--- a/ui2/src/app/component/appcomponent/app.component.html
+++ b/ui2/src/app/component/appcomponent/app.component.html
@@ -19,6 +19,6 @@
     <app-messages></app-messages>
 
 <app-robo-create></app-robo-create>
-
+<app-robo-inhibit></app-robo-inhibit>
 <app-robo-list></app-robo-list>
 </ng-container>
