--- a/ui2/src/app/component/main-menu/gestor-campus/gestor-campus.component.html
+++ b/ui2/src/app/component/main-menu/gestor-campus/gestor-campus.component.html
@@ -1,6 +1,6 @@
 <nav>
-    <app-edificio-geral></app-edificio-geral>
+    <button (click)="openEdificio()">Menu Edificio</button>
+    <button (click)="openPiso()">Menu Piso</button>
     <br><br><br>
     <!--<a routerLink="/login">Logout</a>-->
 </nav>
-
