Updated robo UI #60

--- a/ui2/src/app/component/main-menu/gestor-frota/gestor-frota.component.html
+++ b/ui2/src/app/component/main-menu/gestor-frota/gestor-frota.component.html
@@ -1,6 +1,4 @@
 <nav>
-    <!--<a routerLink="/trucks">Trucks</a>
-
+    <button (click)="openRobo()">Menu Robo</button>
     <br><br><br>
-    <a routerLink="/login">Logout</a>-->
 </nav>
