--- a/ui2/src/app/component/robo/robo-geral/robo-geral.component.html
+++ b/ui2/src/app/component/robo/robo-geral/robo-geral.component.html
@@ -1,11 +1,8 @@
 <h1>Robo</h1>
 <nav>
-    <a routerLink="/RoboCreate">Tipo Robo Create</a> 
-    <a routerLink="/ListRobo">Tipo Robo Create</a> 
-    <a routerLink="/RoboUpdate">Tipo Robo Create</a> 
-
-
-
+    <a routerLink="/roboCreate"> Robo Create</a> 
+    <a routerLink="/listRobo"> Robo Listar</a> 
+    <a routerLink="/roboUpdate">Robo Update</a> 
 </nav>
 <button class ="buttonBack" (click) = "goBack()">Back</button>
 <router-outlet></router-outlet>
