Adicionar metodo listar piso por edificio #30

--- a/ui2/src/app/component/piso/piso-geral/piso-geral.component.html
+++ b/ui2/src/app/component/piso/piso-geral/piso-geral.component.html
@@ -1,7 +1,7 @@
 <h1>Pisos</h1>
 <nav>
     <a routerLink="/pisoCreate">Piso Create</a>
-    <!--<a routerLink="/pisoList">List Pisos</a> -->
+    <a routerLink="/pisoList">List Pisos</a>
     <!--<a routerLink="/pisoUpdate">Piso Update</a> -->
 
 
