--- a/ui2/src/app/component/main-menu/gestor-campus/gestor-campus.component.html
+++ b/ui2/src/app/component/main-menu/gestor-campus/gestor-campus.component.html
@@ -1,6 +1,7 @@
 <nav>
-    <button (click)="openEdificio()">Menu Edificio</button>
-    <button (click)="openPiso()">Menu Piso</button>
+    <button (click)="openEdificio()"class="blue-button">Menu Edificio</button>
+    <button (click)="openPiso()"class="blue-button">Menu Piso</button>
+    <button (click)="openPassagem()"class="blue-button">Menu Passagem</button>
     <br><br><br>
     <!--<a routerLink="/login">Logout</a>-->
 </nav>
