--- a/ui2/src/app/component/main-menu/gestor-frota/gestor-frota.component.html
+++ b/ui2/src/app/component/main-menu/gestor-frota/gestor-frota.component.html
@@ -1,4 +1,4 @@
 <nav>
-    <button (click)="openRobo()">Menu Robo</button>
+    <button (click)="openRobo()"class="blue-button">Menu Robo</button>
     <br><br><br>
 </nav>
