--- a/ui2/src/app/component/edificio/edificio-list/edificio-list.component.html
+++ b/ui2/src/app/component/edificio/edificio-list/edificio-list.component.html
@@ -1,6 +1,10 @@
 <h1>Listar Edificios</h1>
 
-<div>
+<button (click)="listEdificios()" class="small-button">Listar edificios</button>
+<button (click)="listMinMax()" class="small-button">Listar min e max de pisos</button>
+
+
+<div *ngIf="selectOption === 1">
     <div class="search-container">
         <mat-form-field appearance="fill">
             <label>Search by KeyWord</label> <input matInput placeholder="key word" autocomplete="off"
@@ -37,8 +41,62 @@
 
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Page navigation"></mat-paginator>
 </div>
-
 <button class="buttonBack" (click)="goBack()">Back</button>
-<router-outlet></router-outlet>
-message.txt
-3 KB
+
+<div *ngIf="selectOption === 2">
+    <table>
+        <tr>
+            <td><label>Min: </label></td>
+            <td><input type="text" [(ngModel)]="min"> <br></td>
+        </tr>
+        <tr>
+            <th><label>Max: </label></th>
+            <td><input type="text" [(ngModel)]="max"> <br></td>
+        </tr>
+    </table>
+    <br> <br>
+    <button (click)="submitMinMax()">Search</button>
+
+    <div>
+        <div class="search-container">
+            <mat-form-field appearance="fill">
+                <label>Search by KeyWord</label> <input matInput placeholder="key word" autocomplete="off"
+                    (keyup)="filterData($event)">
+            </mat-form-field>
+        </div>
+
+        <br> <br>
+
+
+        <table mat-table matSort [dataSource]="dataSource" class="listagem">
+            <ng-container matColumnDef="Codigo">
+                <th mat-header-cell *matHeaderCellDef> Codigo</th>
+                <td mat-cell *matCellDef="let edificio"> {{edificio.codigoEdificio}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Dimensao Maxima Piso">
+                <th mat-header-cell *matHeaderCellDef> Dimensao Maxima Piso</th>
+                <td mat-cell *matCellDef="let edificio"> {{edificio.dimensaoMaximaPiso}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Descricao">
+                <th mat-header-cell *matHeaderCellDef> Descricao</th>
+                <td mat-cell *matCellDef="let edificio"> {{edificio.descricaoEdificio}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Nome Opcional">
+                <th mat-header-cell *matHeaderCellDef> Nome Opcional</th>
+                <td mat-cell *matCellDef="let edificio"> {{edificio.nomeOpcionalEdificio}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Page navigation"></mat-paginator>
+    </div>
+
+
+
+    <button class="buttonBack" (click)="goBack()">Back</button>
+    <router-outlet></router-outlet>
