--- a/ui2/src/app/component/piso/piso-geral/piso-geral.component.html
+++ b/ui2/src/app/component/piso/piso-geral/piso-geral.component.html
@@ -2,7 +2,7 @@
 <nav>
     <a routerLink="/pisoCreate">Piso Create</a>
     <a routerLink="/pisoList">List Pisos</a>
-    <!--<a routerLink="/pisoUpdate">Piso Update</a> -->
+    <a routerLink="/pisoUpdate">Piso Update</a> 
 
 
 </nav>
