Atualizados os componentes geral e list de elevadores #46

--- a/ui2/src/app/component/elevador/elevador-geral/elevador-geral.component.html
+++ b/ui2/src/app/component/elevador/elevador-geral/elevador-geral.component.html
@@ -1,8 +1,8 @@
 <h1>Elevadores</h1>
 <nav>
-    <a routerLink="/elevadorCreate">Edificio Create</a> 
-    <a routerLink="/elevadorList">List Edificios</a> 
-    <a routerLink="/elevadorUpdate">Edificio Update</a> 
+    <a routerLink="/elevadorCreate">Criar elevador</a> 
+    <a routerLink="/elevadorList">Listar Elevadores</a> 
+    <a routerLink="/elevadorUpdate">Atualizar elevador</a> 
 
 
 </nav>
