Updated inhibit robo frontend #51

--- a/ui2/src/app/component/robo/robo-geral/robo-geral.component.html
+++ b/ui2/src/app/component/robo/robo-geral/robo-geral.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/roboCreate"> Robo Create</a> 
     <a routerLink="/listRobo"> Robo Listar</a> 
     <a routerLink="/roboUpdate">Robo Update</a> 
+    <a routerLink="/inhibitRobo">Robo Inibir</a> 
 </nav>
 <button class ="buttonBack" (click) = "goBack()">Back</button>
 <router-outlet></router-outlet>
