--- a/ui2/src/app/component/passagem/passagem-create/passagem-create.component.html
+++ b/ui2/src/app/component/passagem/passagem-create/passagem-create.component.html
@@ -1,32 +1,30 @@
-<h3>Criar Passagem</h3>
+<h1>Criar Edificio</h1>
 
 <div>
-  <div>
-    <table>
+    <div>
+      <table>
+        <tr>
+          <th><label>Codigo: </label></th>
+          <th><input [(ngModel)]="edificio.codigoEdificio" /></th>
+        </tr>
+        <tr>
+          <th><label>Dimensao Maxima Piso: </label></th>
+          <th><input type="string" [(ngModel)]="edificio.dimensaoMaximaPiso" /></th>
+        </tr>
+        <tr>
+          <th><label>Descricao: </label>
+          <th><input type="string" [(ngModel)]="edificio.descricaoEdificio" />
+        </tr>
       <tr>
-        <th><label>Designacao: </label></th>
-        <td><input type="string" [(ngModel)]="passagem.designacao" /></td>
+        <th><label>Nome Opcional: </label>
+          <th><input type="string" [(ngModel)]="edificio.nomeOpcionalEdificio" />
       </tr>
-      <tr>
-        <th><label>Edificio A: </label></th>
-        <td><input type="string" [(ngModel)]="passagem.edificioA" /></td>
-      </tr>
-      <tr>
-        <th><label>Edificio B: </label></th>
-        <td><input type="string" [(ngModel)]="passagem.edificioB" /></td>
-      </tr>
-      <tr>
-        <th><label>Piso A: </label></th>
-        <td><input type="string" [(ngModel)]="passagem.pisoA" /></td>
-      </tr>
-      <tr>
-        <th><label>Piso B: </label></th>
-        <td><input type="string" [(ngModel)]="passagem.pisoB" /></td>
-      </tr>
-    </table>
-  </div>
-  <div>
-    <button class="buttonBack" (click)="goBack()">Back</button>
-    <button (click)="createPassagem()">Add</button>
-  </div>
+      </table>
+    </div>
+    <div>
+      <button class="buttonBack" (click)="goBack()">Back</button>
+      <button (click)="createEdificio()">Add</button>
+    </div>
+
+
 </div>
