--- a/ui2/src/app/component/main-menu/gestor-campus/gestor-campus.component.html
+++ b/ui2/src/app/component/main-menu/gestor-campus/gestor-campus.component.html
@@ -1,8 +1,9 @@
-<nav>
-    <button (click)="openEdificio()"class="blue-button">Menu Edificio</button>
-    <button (click)="openPiso()"class="blue-button">Menu Piso</button>
-    <button (click)="openPassagem()"class="blue-button">Menu Passagem</button>
-    <button (click)="openElevador()"class="blue-button">Menu Elevador</button>
-    <br><br><br>
-    <!--<a routerLink="/login">Logout</a>-->
-</nav>
+<mat-toolbar>
+  <h1>RobDroneGO</h1>
+  <div>
+    <button (click)="openEdificio()">Edificio</button>
+    <button (click)="openPiso()">Piso</button>
+    <button (click)="openPassagem()">Passagem</button>
+    <button (click)="openElevador()">Elevador</button>
+  </div>
+</mat-toolbar>
