--- a/ui2/src/styles.css
+++ b/ui2/src/styles.css
@@ -5,6 +5,10 @@
 h1 {
   color: #264D73;
   font-size: 2.5rem;
+  padding: .5rem;
+  margin-right: 2rem;
+  margin-bottom: .5rem;
+  margin-top: .5rem;
 }
 h2, h3 {
   color: #444;
@@ -14,13 +18,13 @@ h3 {
   font-size: 1.3rem;
 }
 body {
-  padding: .5rem;
-  max-width: 1000px;
+  padding: 5rem;
+  max-width: 1920px;
   margin: auto;
 }
 @media (min-width: 600px) {
   body {
-    padding: 2rem;
+    padding: 0rem;
   }
 }
 body, input[text] {
@@ -31,16 +35,16 @@ a {
   cursor: pointer;
 }
 button {
-  background-color: #eee;
+  background-color: #2196F3;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 1.2rem;
-  padding: 1rem;
-  margin-right: 1rem;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
+  padding: .5rem;
+  margin-right: .5rem;
+  margin-bottom: .5rem;
+  margin-top: .5rem;
 }
 button:hover {
   background-color: black;
@@ -53,15 +57,17 @@ button:disabled {
 }
 
 /* Navigation link styles */
+
 nav a {
   padding: 5px 10px;
   text-decoration: none;
   margin-right: 10px;
   margin-top: 10px;
   display: inline-block;
-  background-color: #e8e8e8;
+  background-color: #c50000;
   color: #3d3d3d;
   border-radius: 4px;
+  width: 50px;
 }
 
 nav a:hover {
