--- a/ui2/src/app/component/login/login.component.css
+++ b/ui2/src/app/component/login/login.component.css
@@ -15,6 +15,8 @@ body {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 1;
 }
 
 .login-box h2 {
@@ -45,7 +47,15 @@ body {
     background-color: #0056b3;
 }
 
-
-.mat-toolbar {
-    height: 50px;
-}
+.background-container {
+    background-image: url('/assets/isep.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5; /* Adjust the opacity value as needed */
+  }
