--- a/ui2/src/app/component/aboutus/aboutus.component.css
+++ b/ui2/src/app/component/aboutus/aboutus.component.css
@@ -1,3 +1,27 @@
+.about-us-section {
+    text-align: center;
+    padding: 20px;
+    position: relative;
+    z-index: 1;
+}
+
+.team-member {
+    display: inline-block;
+    margin: 20px;
+    position: relative;
+    z-index: 1;
+}
+
+.team-member img {
+    width: 150px; /* Adjust the size of the images as needed */
+    border-radius: 50%; /* Optional: Round the corners of the images */
+}
+
+.team-member p {
+    margin-top: 10px;
+    font-weight: bold;
+}
+
 .mat-toolbar {
     background-color: #2196F3;
     color: #FFFFFF;
@@ -8,11 +32,7 @@
     z-index: 1;
 }
 
- .spacer {
-    margin-left: auto; 
-  }
-
-  .background-container {
+.background-container {
     background-image: url('/assets/isep.jpg');
     background-size: cover;
     background-position: center center;
