--- a/ui2/src/app/component/main-menu/gestor-campus/gestor-campus.component.html
+++ b/ui2/src/app/component/main-menu/gestor-campus/gestor-campus.component.html
@@ -1,9 +1,35 @@
+<div class="background-container"></div>
 <mat-toolbar>
-  <h1>RobDroneGO</h1>
-  <div>
-    <button (click)="openEdificio()">Edificio</button>
-    <button (click)="openPiso()">Piso</button>
-    <button (click)="openPassagem()">Passagem</button>
-    <button (click)="openElevador()">Elevador</button>
-  </div>
+  <h1 class="h1">RobDroneGO</h1>
+  <button mat-button [matMenuTriggerFor]="edificioMenu">Edificio</button>
+  <mat-menu #edificioMenu="matMenu">
+    <button mat-menu-item (click)="createEdificio()">Criar Edificio</button>
+    <button mat-menu-item (click)="listEdificios()">Listar Edificios</button>
+    <button mat-menu-item (click)="listEdificios()">Listar Edificios com Min e Max de pisos</button>
+    <button mat-menu-item (click)="updateEdificio()">Atualizar Edificio</button>
+  </mat-menu>
+
+  <button mat-button [matMenuTriggerFor]="pisoMenu">Piso</button>
+  <mat-menu #pisoMenu="matMenu">
+    <button mat-menu-item (click)="createPiso()">Criar Piso</button>
+    <button mat-menu-item (click)="listPisos()">Listar Pisos</button>
+    <button mat-menu-item (click)="updatePiso()">Atualizar Piso</button>
+  </mat-menu>
+
+  <button mat-button [matMenuTriggerFor]="passagemMenu">Passagem</button>
+  <mat-menu #passagemMenu="matMenu">
+    <button mat-menu-item (click)="createPassagem()">Criar Passagem</button>
+    <button mat-menu-item (click)="listPassagens()">Listar Passagens</button>
+    <button mat-menu-item (click)="updatePassagem()">Atualizar Passagem</button>
+  </mat-menu>
+
+  <button mat-button [matMenuTriggerFor]="elevadorMenu">Elevador</button>
+  <mat-menu #elevadorMenu="matMenu">
+    <button mat-menu-item (click)="createElevador()">Criar Elevador</button>
+    <button mat-menu-item (click)="listElevadores()">Listar Elevadores</button>
+    <button mat-menu-item (click)="updateElevador()">Atualizar Elevador</button>
+  </mat-menu>
+
+  <button mat-button (click)="openAboutUs()" class="spacer">About Us</button>
+
 </mat-toolbar>
