--- a/ui2/src/styles.css
+++ b/ui2/src/styles.css
@@ -1,4 +1,4 @@
-/* Global Styles */
+
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -41,10 +41,11 @@ button {
   cursor: pointer;
   color: rgb(255, 255, 255);
   font-size: 1.2rem;
-  padding: .5rem;
-  margin-right: .5rem;
-  margin-bottom: .5rem;
-  margin-top: .5rem;
+  padding: 0.5rem;
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+  outline: none;
 }
 button:hover {
   background-color: black;
@@ -56,7 +57,7 @@ button:disabled {
   cursor: auto;
 }
 
-/* Navigation link styles */
+
 
 nav a {
   padding: 5px 10px;
