--- a/ui2/src/app/component/edificio/edificio-create/edificio-create.component.html
+++ b/ui2/src/app/component/edificio/edificio-create/edificio-create.component.html
@@ -1,30 +1,31 @@
-<h1>Criar Edificio</h1>
-
-<div>
-    <div>
-      <table>
-        <tr>
-          <th><label>Codigo: </label></th>
-          <th><input [(ngModel)]="edificio.codigoEdificio" /></th>
-        </tr>
-        <tr>
-          <th><label>Dimensao Maxima Piso: </label></th>
-          <th><input type="string" [(ngModel)]="edificio.dimensaoMaximaPiso" /></th>
-        </tr>
-        <tr>
-          <th><label>Descricao: </label>
-          <th><input type="string" [(ngModel)]="edificio.descricaoEdificio" />
-        </tr>
+<div class="background-container"></div>
+<mat-toolbar>
+  <h1 class="h1">RobDroneGO</h1>
+</mat-toolbar>
+<body>
+<div class="box">
+  <div>
+    <table>
+      <tr>
+        <th><label>Codigo: </label></th>
+        <th><input [(ngModel)]="edificio.codigoEdificio" /></th>
+      </tr>
+      <tr>
+        <th><label>Dimensao Maxima Piso: </label></th>
+        <th><input type="string" [(ngModel)]="edificio.dimensaoMaximaPiso" /></th>
+      </tr>
+      <tr>
+        <th><label>Descricao: </label>
+        <th><input type="string" [(ngModel)]="edificio.descricaoEdificio" />
+      </tr>
       <tr>
         <th><label>Nome Opcional: </label>
-          <th><input type="string" [(ngModel)]="edificio.nomeOpcionalEdificio" />
+        <th><input type="string" [(ngModel)]="edificio.nomeOpcionalEdificio" />
       </tr>
-      </table>
-    </div>
-    <div>
-      <button class="buttonBack" (click)="goBack()">Back</button>
-      <button (click)="createEdificio()">Add</button>
-    </div>
-
-
+    </table>
+  </div>
+  <div>
+    <button (click)="createEdificio()">Add</button>
+  </div>
 </div>
+</body>
