--- a/ui2/src/app/component/main-menu/gestor-campus/gestor-campus.component.css
+++ b/ui2/src/app/component/main-menu/gestor-campus/gestor-campus.component.css
@@ -1,31 +1,31 @@
 .mat-toolbar {
-    background-color: #2196F3;
-    color: #FFFFFF;
-    height: 70px;
-    font-size: 1.2em;
-    font-weight: bold;
-    position: relative;
-    z-index: 1;
+  background-color: #2196F3;
+  color: #FFFFFF;
+  height: 70px;
+  font-size: 1.2em;
+  font-weight: bold;
+  position: relative;
+  z-index: 1;
 }
 
- .spacer {
-    margin-left: auto; 
-  }
+.background-container {
+  background-image: url('/assets/isep.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+}
 
-  .background-container {
-    background-image: url('/assets/isep.jpg');
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0.5; /* Adjust the opacity value as needed */
-  }
+.h1 {
+  color: #FFFFFF;
+  font-weight: bold;
+}
 
-  .h1{
-    color: #FFFFFF;
-    font-weight: bold;
-  }
+.spacer {
+  margin-left: auto;
+}
