--- a/ui2/src/app/component/edificio/edificio-list/edificio-list.component.html
+++ b/ui2/src/app/component/edificio/edificio-list/edificio-list.component.html
@@ -1,7 +1,11 @@
-<h1>Listar Edificios</h1>
-
-<button (click)="listEdificios()" class="small-button">Listar edificios</button>
-<button (click)="listMinMax()" class="small-button">Listar min e max de pisos</button>
+<div class="background-container"></div>
+<mat-toolbar>
+  <h1 class="h1">RobDroneGO</h1>
+</mat-toolbar>
+<body>
+<div class="box">
+    <button *ngIf="selectOption !== 1 && selectOption !== 2" (click)="listEdificios()">Listar edificios</button>
+    <button *ngIf="selectOption !== 1 && selectOption !== 2" (click)="listMinMax()">Listar min e max de pisos</button>
 
 
 <div *ngIf="selectOption === 1">
@@ -14,7 +18,7 @@
 
     <br> <br>
 
-    <table mat-table matSort [dataSource]="dataSource" class="listagem">
+    <table mat-table matSort [dataSource]="dataSource">
         <ng-container matColumnDef="Codigo">
             <th mat-header-cell *matHeaderCellDef> Codigo</th>
             <td mat-cell *matCellDef="let edificio"> {{edificio.codigoEdificio}} </td>
@@ -41,7 +45,6 @@
 
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Page navigation"></mat-paginator>
 </div>
-<button class="buttonBack" (click)="goBack()">Back</button>
 
 <div *ngIf="selectOption === 2">
     <table>
@@ -68,7 +71,7 @@
         <br> <br>
 
 
-        <table mat-table matSort [dataSource]="dataSource" class="listagem">
+        <table mat-table matSort [dataSource]="dataSource">
             <ng-container matColumnDef="Codigo">
                 <th mat-header-cell *matHeaderCellDef> Codigo</th>
                 <td mat-cell *matCellDef="let edificio"> {{edificio.codigoEdificio}} </td>
@@ -95,8 +98,4 @@
 
         <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Page navigation"></mat-paginator>
     </div>
-
-
-
-    <button class="buttonBack" (click)="goBack()">Back</button>
-    <router-outlet></router-outlet>
+</div>
