Atualizado criar passagem com escolha interativa #33

--- a/ui2/src/app/component/passagem/passagem-create/passagem-create.component.html
+++ b/ui2/src/app/component/passagem/passagem-create/passagem-create.component.html
@@ -1,32 +1,49 @@
-<h3>Criar Passagem</h3>
+<div class="background-container"></div>
+<mat-toolbar>
+  <h1 class="h1">RobDroneGO</h1>
+</mat-toolbar>
 
-<div>
-  <div>
-    <table>
+<body>
+  <div class="box">
+    <div>
       <tr>
         <th><label>Designacao: </label></th>
         <td><input type="string" [(ngModel)]="passagem.designacao" /></td>
       </tr>
       <tr>
-        <th><label>Edificio A: </label></th>
-        <td><input type="string" [(ngModel)]="passagem.edificioA" /></td>
+        <mat-form-field>
+          <mat-label>Edificio A</mat-label>
+          <mat-select [(ngModel)]="passagem.edificioA" name="Edificio A">
+            <mat-option *ngFor="let edificio of edificios" [value]="edificio">{{edificio}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      <tr>
+        <mat-form-field>
+          <mat-label>Edificio B</mat-label>
+          <mat-select [(ngModel)]="passagem.edificioB" name="Edificio B">
+            <mat-option *ngFor="let edificio of edificios" [value]="edificio">{{edificio}}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </tr>
       <tr>
-        <th><label>Edificio B: </label></th>
-        <td><input type="string" [(ngModel)]="passagem.edificioB" /></td>
+        <mat-form-field>
+          <mat-label>Piso A</mat-label>
+          <mat-select [(ngModel)]="passagem.pisoA" name="Piso A">
+            <mat-option *ngFor="let piso of pisos" [value]="piso">{{piso}}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </tr>
       <tr>
-        <th><label>Piso A: </label></th>
-        <td><input type="string" [(ngModel)]="passagem.pisoA" /></td>
+        <mat-form-field>
+          <mat-label>Piso B</mat-label>
+          <mat-select [(ngModel)]="passagem.pisoB" name="Piso B">
+            <mat-option *ngFor="let piso of pisos" [value]="piso">{{piso}}</mat-option>
+          </mat-select>
+        </mat-form-field>
       </tr>
-      <tr>
-        <th><label>Piso B: </label></th>
-        <td><input type="string" [(ngModel)]="passagem.pisoB" /></td>
-      </tr>
-    </table>
+    </div>
+    <div>
+      <button (click)="createPassagem()">Add</button>
+    </div>
   </div>
-  <div>
-    <button class="buttonBack" (click)="goBack()">Back</button>
-    <button (click)="createPassagem()">Add</button>
-  </div>
-</div>
+</body>
