--- a/ui2/src/app/component/edificio/edificio-update/edificio-update.component.html
+++ b/ui2/src/app/component/edificio/edificio-update/edificio-update.component.html
@@ -1,30 +1,36 @@
-<h1>Editar Edificio</h1>
+<div class="background-container"></div>
+<mat-toolbar>
+  <h1 class="h1">RobDroneGO</h1>
+</mat-toolbar>
 
-<div>
+<body>
+  <div class="box">
     <div>
       <table>
         <tr>
-          <th><label>Codigo: </label></th>
-          <th><input [(ngModel)]="edificio.codigoEdificio" /></th>
+          <mat-form-field>
+            <mat-label>Codigo Edificio:</mat-label>
+            <mat-select [(ngModel)]="edificio.codigoEdificio" name="Edificio">
+              <mat-option *ngFor="let edificio of edificios" [value]="edificio">{{edificio}}</mat-option>
+            </mat-select>
+          </mat-form-field>
         </tr>
         <tr>
-          <th><label>Dimensao Maxima Piso: </label></th>
+          <th><label>Dimensao Maxima Piso [x,y]:</label></th>
           <th><input type="string" [(ngModel)]="edificio.dimensaoMaximaPiso" /></th>
         </tr>
         <tr>
           <th><label>Descricao: </label>
           <th><input type="string" [(ngModel)]="edificio.descricaoEdificio" />
         </tr>
-      <tr>
-        <th><label>Nome Opcional: </label>
+        <tr>
+          <th><label>Nome Opcional: </label>
           <th><input type="string" [(ngModel)]="edificio.nomeOpcionalEdificio" />
-      </tr>
+        </tr>
       </table>
     </div>
     <div>
-      <button class="buttonBack" (click)="goBack()">Back</button>
-      <button (click)="updateEdificio()">Add</button>
+      <button (click)="updateEdificio()">Update</button>
     </div>
-
-
-</div>
+  </div>
+</body>
