Atualizar routing, login e about us

--- a/ui2/src/app/component/edificio/edificio-create/edificio-create.component.html
+++ b/ui2/src/app/component/edificio/edificio-create/edificio-create.component.html
@@ -12,7 +12,7 @@
           <th><input [(ngModel)]="edificio.codigoEdificio" /></th>
         </tr>
         <tr>
-          <th><label>Dimensao Maxima Piso: </label></th>
+          <th><label>Dimensao Maxima Piso [x,y]: </label></th>
           <th><input type="string" [(ngModel)]="edificio.dimensaoMaximaPiso" /></th>
         </tr>
         <tr>
