--- a/ui2/src/app/component/aboutus/aboutus.component.css
+++ b/ui2/src/app/component/aboutus/aboutus.component.css
@@ -17,8 +17,8 @@
 }
 
 .team-member img {
-    width: 150px; /* Adjust the size of the images as needed */
-    border-radius: 50%; /* Optional: Round the corners of the images */
+    width: 150px; 
+    border-radius: 50%; 
 }
 
 .team-member p {
@@ -34,9 +34,9 @@
     font-weight: bold;
     position: relative;
     z-index: 1;
-}
-
-.background-container {
+  }
+  
+  .background-container {
     background-image: url('/assets/isep.jpg');
     background-size: cover;
     background-position: center center;
@@ -46,10 +46,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.5; /* Adjust the opacity value as needed */
+    opacity: 0.5;
   }
-
-  .h1{
+  
+  
+  .h1 {
     color: #FFFFFF;
     font-weight: bold;
   }
+  
