--- a/ui2/src/app/component/aboutus/aboutus.component.html
+++ b/ui2/src/app/component/aboutus/aboutus.component.html
@@ -1,6 +1,6 @@
 <div class="background-container"></div>
 <mat-toolbar>
-    <h1>RobDroneGO</h1>
+    <h1 class="h1">RobDroneGO</h1>
 </mat-toolbar>
 <div class="about-us-section">
     <h2>About Us</h2>
