Atualizar criaçao de mapa piso #32

--- a/ui2/src/app/component/mapa-piso/mapa-piso-create/mapa-piso-create.component.html
+++ b/ui2/src/app/component/mapa-piso/mapa-piso-create/mapa-piso-create.component.html
@@ -1,22 +1,19 @@
-<h1>Criar Mapa Piso</h1>
+<div class="background-container"></div>
+<mat-toolbar>
+  <h1 class="h1">RobDroneGO</h1>
+</mat-toolbar>
 
-<div>
+<body>
+  <div class="box">
+    <mat-form-field>
+      <mat-label>Piso</mat-label>
+      <mat-select [(ngModel)]="mapaPiso.piso" name="Piso">
+        <mat-option *ngFor="let piso of pisos" [value]="piso">{{piso}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <input #fileInput type="file" (change)="onFileSelected($event)" accept=".json">
     <div>
-      <table>
-        <tr>
-          <th><label>Piso: </label></th>
-          <th><input [(ngModel)]="mapaPiso.piso" /></th>
-        </tr>
-        <tr>
-          <th><label>Mapa: </label></th>
-          <th><input type="string" [(ngModel)]="mapaPiso.mapa" /></th>
-        </tr>
-      </table>
-    </div>
-    <div>
-      <button class="buttonBack" (click)="goBack()">Back</button>
       <button (click)="createMapaPiso()">Add</button>
     </div>
-
-
-</div>
+  </div>
+</body>
