--- a/ui2/src/app/component/piso/piso-create/piso-create.component.css
+++ b/ui2/src/app/component/piso/piso-create/piso-create.component.css
@@ -1,40 +1,70 @@
-h1 {
-    margin-bottom: 0;
-  }
+.mat-toolbar {
+  background-color: #2196F3;
+  color: #FFFFFF;
+  height: 70px;
+  font-size: 1.2em;
+  font-weight: bold;
+  position: relative;
+  z-index: 1;
+}
 
-  nav a {
-    padding: 1rem;
-    text-decoration: none;
-    margin-top: 10px;
-    display: inline-block;
-    background-color: #e8e8e8;
-    color: #3d3d3d;
-    border-radius: 4px;
-  }
+.background-container {
+  background-image: url('/assets/isep.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+}
 
-  nav a:hover {
-    color: white;
-    background-color: pink;
-  }
+.h1 {
+  color: #FFFFFF;
+  font-weight: bold;
+}
 
-  nav a:active {
-    background-color: black;
-  }
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f4f4f4;
+}
 
-  button {
-    margin-top: 20px;
-    background-color: #eee;
-    padding: 1rem;
-    border-radius: 4px;
-    font-size: 1rem;
-  }
+.box {
+  width: 300px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+  z-index: 1;
+}
 
-  button:hover {
-    background-color: #cfd8dc;
-  }
+.box input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
 
-  button:disabled {
-    background-color: #eee;
-    color: #ccc;
-    cursor: auto;
-  }
+.box button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007BFF;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.box button:hover {
+  background-color: #0056b3;
+}
+
