--- a/ui2/src/app/component/tipo-robo/tipo-robo-create/tipo-robo-create.component.html
+++ b/ui2/src/app/component/tipo-robo/tipo-robo-create/tipo-robo-create.component.html
@@ -1,30 +1,35 @@
-<h1>Criar Tipo Robo</h1>
+<div class="background-container"></div>
+<mat-toolbar>
+    <h1 class="h1">RobDroneGO</h1>
+</mat-toolbar>
 
-<div>
-    <div>
-      <table>
-        <tr>
-          <th><label>Tarefas: </label></th>
-          <th><input [(ngModel)]="tipoRobo.tarefas" /></th>
-        </tr>
-        <tr>
-          <th><label>Designacao: </label></th>
-          <th><input type="string" [(ngModel)]="tipoRobo.designacao" /></th>
-        </tr>
-        <tr>
-          <th><label>Marca: </label>
-          <th><input type="string" [(ngModel)]="tipoRobo.marca" />
-        </tr>
-      <tr>
-        <th><label>Modelo: </label>
-          <th><input type="string" [(ngModel)]="tipoRobo.modelo" />
-      </tr>
-      </table>
+<body>
+    <div class="box">
+        <div>
+            <tr>
+                <th><label>Designacao: </label></th>
+                <th><input type="string" [(ngModel)]="tipoRobo.designacao" /></th>
+            </tr>
+            <tr>
+                <th><label>Marca: </label>
+                <th><input type="string" [(ngModel)]="tipoRobo.marca" />
+            </tr>
+            <tr>
+                <th><label>Modelo: </label>
+                <th><input type="string" [(ngModel)]="tipoRobo.modelo" />
+            </tr>
+            <tr>
+            <mat-form-field>
+                <mat-label>Tarefas</mat-label>
+                <mat-select [(ngModel)]="tipoRobo.tarefas" name="selectedTarefas" multiple>
+                    <mat-option *ngFor="let tarefa of tarefas" [value]="tarefa"> {{ tarefa }}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            </tr>
+        </div>
+        <div>
+            <button (click)="createTipoRobo()">Add</button>
+        </div>
     </div>
-    <div>
-      <button class="buttonBack" (click)="goBack()">Back</button>
-      <button (click)="createTipoRobo()">Add</button>
-    </div>
-
-
-</div>
+</body>
