Atualizar main menu #60

--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -53,7 +53,7 @@
   </mat-menu>
 
   <mat-menu #tipoRoboMenu="matMenu">
-    <button mat-menu-item (click)="createEdificio()">Criar Tipo Robo</button>
+    <button mat-menu-item (click)="createTipoRobo()">Criar Tipo Robo</button>
   </mat-menu>
 
   <mat-menu #roboMenu="matMenu">
