Adicionado back button aos components de edificio

--- a/ui2/src/app/component/edificio/edificio-update/edificio-update.component.html
+++ b/ui2/src/app/component/edificio/edificio-update/edificio-update.component.html
@@ -31,6 +31,7 @@
     </div>
     <div>
       <button (click)="updateEdificio()">Update</button>
+      <button (click)="goBack()">Back</button>
     </div>
   </div>
 </body>
