--- a/ui2/src/app/component/edificio/edificio-create/edificio-create.component.html
+++ b/ui2/src/app/component/edificio/edificio-create/edificio-create.component.html
@@ -27,6 +27,7 @@
     </div>
     <div>
       <button (click)="createEdificio()">Add</button>
+      <button (click)="goBack()">Back</button>
     </div>
   </div>
 </body>
