Adicionado back button aos components de passagem

--- a/ui2/src/app/component/passagem/passagem-create/passagem-create.component.html
+++ b/ui2/src/app/component/passagem/passagem-create/passagem-create.component.html
@@ -44,6 +44,7 @@
     </div>
     <div>
       <button (click)="createPassagem()">Add</button>
+      <button (click)="goBack()">Back</button>
     </div>
   </div>
 </body>
