--- a/ui2/src/app/component/passagem/passagem-list/passagem-list.component.html
+++ b/ui2/src/app/component/passagem/passagem-list/passagem-list.component.html
@@ -48,6 +48,7 @@
             </table>
 
             <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Page navigation"></mat-paginator>
+            <button (click)="goBack()">Back</button>
         </div>
     </div>
 </body>
