--- a/ui2/src/app/component/piso/piso-update/piso-update.component.html
+++ b/ui2/src/app/component/piso/piso-update/piso-update.component.html
@@ -1,24 +1,37 @@
-<h1>Editar Piso</h1>
+<div class="background-container"></div>
+<mat-toolbar>
+  <h1 class="h1">RobDroneGO</h1>
+</mat-toolbar>
 
-<div>
-  <div>
-    <table>
-      <tr>
-        <th><label>Designacao: </label></th>
-        <td><input type="text" [(ngModel)]="piso.designacao" /></td>
-      </tr>
-      <tr>
-        <th><label>Descricao: </label></th>
-        <td><input type="text" [(ngModel)]="piso.descricao" /></td>
-      </tr>
-      <tr>
-        <th><label>Codigo Edificio: </label></th>
-        <td><input type="text" [(ngModel)]="piso.edificio" /></td>
-      </tr>
-    </table>
+<body>
+  <div class="box">
+    <div>
+      <table>
+        <tr>
+          <mat-form-field>
+            <mat-label>Designacao</mat-label>
+            <mat-select [(ngModel)]="piso.designacao">
+              <mat-option *ngFor="let piso of pisos" [value]="piso">{{piso}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </tr>
+        <tr>
+          <th><label>Descricao: </label></th>
+          <th><input type="string" [(ngModel)]="piso.descricao" /></th>
+        </tr>
+        <tr>
+          <mat-form-field>
+            <mat-label>Edificio</mat-label>
+            <mat-select [(ngModel)]="piso.edificio" name="Edificio">
+              <mat-option *ngFor="let edificio of edificios" [value]="edificio">{{edificio}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </tr>
+      </table>
+    </div>
+    <div>
+      <button (click)="updatePiso()">Update</button>
+      <button (click)="goBack()">Back</button>
+    </div>
   </div>
-  <div>
-    <button class="buttonBack" (click)="goBack()">Back</button>
-    <button (click)="updatePiso()">Update</button>
-  </div>
-</div>
+</body>
