Adicionado metodo de criar sala em front end  #48

--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -42,7 +42,7 @@
   </mat-menu>
 
   <mat-menu #salaMenu="matMenu">
-    <button mat-menu-item (click)="createElevador()">Criar sala</button>
+    <button mat-menu-item (click)="createSala()">Criar sala</button>
   </mat-menu>
 
   <!--Gestor de Frota Menu-->
