Atualizar html criar elevador #44

--- a/ui2/src/app/component/elevador/elevador-create/elevador-create.component.html
+++ b/ui2/src/app/component/elevador/elevador-create/elevador-create.component.html
@@ -34,6 +34,7 @@
               <mat-option *ngFor="let edificio of edificios" [value]="edificio">{{edificio}}</mat-option>
             </mat-select>
           </mat-form-field>
+          <button (click)="submitEdificio()">Submit</button>
         </tr>
         <tr>
           <mat-form-field>
