Adicionar metodo de listar pisos por edificio #30

--- a/ui2/src/app/component/piso/piso-list/piso-list.component.html
+++ b/ui2/src/app/component/piso/piso-list/piso-list.component.html
@@ -1,47 +1,53 @@
-<h1>Listar Pisos</h1>
+<div class="background-container"></div>
+<mat-toolbar>
+    <h1 class="h1">RobDroneGO</h1>
+</mat-toolbar>
 
-    <table>
-        <tr>
-            <td><label>Codigo Edificio: </label></td>
-            <td><input type="text" [(ngModel)]="codigoEdificio"> <br></td>
-        </tr>
-    </table>
-    <button (click)="listPisos()" class="small-button">Search</button>
-    <br> <br>
+<body>
+    <div class="box">
 
-    <div>
-        <div class="search-container">
-            <mat-form-field appearance="fill">
-                <label>Search by KeyWord</label> <input matInput placeholder="key word" autocomplete="off"
-                    (keyup)="filterData($event)">
-            </mat-form-field>
-        </div>
-
+        <table>
+            <tr>
+                <td><label>Codigo Edificio: </label></td>
+                <td><input type="text" [(ngModel)]="codigoEdificio"> <br></td>
+            </tr>
+        </table>
+        <button (click)="listPisos()">Search</button>
         <br> <br>
 
-        <table mat-table matSort [dataSource]="dataSource" class="listagem">
+        <div>
+            <div class="search-container">
+                <mat-form-field appearance="fill">
+                    <label>Search by KeyWord</label> <input matInput placeholder="key word" autocomplete="off"
+                        (keyup)="filterData($event)">
+                </mat-form-field>
+            </div>
 
-            <ng-container matColumnDef="Designacao">
-                <th mat-header-cell *matHeaderCellDef> Designacao</th>
-                <td mat-cell *matCellDef="let piso"> {{piso.designacao}} </td>
-            </ng-container>
+            <br> <br>
 
-            <ng-container matColumnDef="Descricao">
-                <th mat-header-cell *matHeaderCellDef> Descricao</th>
-                <td mat-cell *matCellDef="let piso"> {{piso.descricao}} </td>
-            </ng-container>
+            <table mat-table matSort [dataSource]="dataSource" class="listagem">
 
-            <ng-container matColumnDef="Edificio">
-                <th mat-header-cell *matHeaderCellDef> Edificio</th>
-                <td mat-cell *matCellDef="let piso"> {{piso.edificio}} </td>
-            </ng-container>
+                <ng-container matColumnDef="Designacao">
+                    <th mat-header-cell *matHeaderCellDef> Designacao</th>
+                    <td mat-cell *matCellDef="let piso"> {{piso.designacao}} </td>
+                </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+                <ng-container matColumnDef="Descricao">
+                    <th mat-header-cell *matHeaderCellDef> Descricao</th>
+                    <td mat-cell *matCellDef="let piso"> {{piso.descricao}} </td>
+                </ng-container>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Page navigation"></mat-paginator>
+                <ng-container matColumnDef="Edificio">
+                    <th mat-header-cell *matHeaderCellDef> Edificio</th>
+                    <td mat-cell *matCellDef="let piso"> {{piso.edificio}} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Page navigation"></mat-paginator>
+            <button class="buttonBack" (click)="goBack()">Back</button>
+        </div>
     </div>
-
-<button class="buttonBack" class="small-button" (click)="goBack()">Back</button>
-<router-outlet></router-outlet>
+</body>
