Atualizar criar robo front end #50

--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -57,9 +57,9 @@
   </mat-menu>
 
   <mat-menu #roboMenu="matMenu">
-    <button mat-menu-item (click)="createPiso()">Criar Robo</button>
-    <button mat-menu-item (click)="listPisos()">Listar Robos</button>
-    <button mat-menu-item (click)="updatePiso()">Inibir Robo</button>
+    <button mat-menu-item (click)="createRobo()">Criar Robo</button>
+    <button mat-menu-item (click)="listRobos()">Listar Robos</button>
+    <button mat-menu-item (click)="inibirRobo()">Inibir Robo</button>
   </mat-menu>
 
   <!--Gestor de Tarefas Menu-->
