--- a/ui2/src/app/component/robo/robo-create/robo-create.component.html
+++ b/ui2/src/app/component/robo/robo-create/robo-create.component.html
@@ -1,6 +1,10 @@
-<h1>Criar Robo</h1>
+<div class="background-container"></div>
+<mat-toolbar>
+  <h1 class="h1">RobDroneGO</h1>
+</mat-toolbar>
 
-<div>
+<body>
+  <div class="box">
     <div>
       <table>
         <tr>
@@ -11,24 +15,27 @@
           <th><label>Codigo: </label>
           <th><input type="string" [(ngModel)]="robo.codigo" />
         </tr>
-      <tr>
-        <th><label>Numero Serie: </label>
+        <tr>
+          <th><label>Numero Serie: </label>
           <th><input type="string" [(ngModel)]="robo.numeroSerie" />
-      </tr>
-      <tr>
-        <th><label>Nickname: </label>
+        </tr>
+        <tr>
+          <th><label>Nickname: </label>
           <th><input type="string" [(ngModel)]="robo.nickname" />
-      </tr>
-      <tr>
-        <th><label>Tipo Robo: </label>
-          <th><input type="string" [(ngModel)]="robo.tipoRobo" />
-      </tr>
+        </tr>
+        <tr>
+          <mat-form-field>
+            <mat-label>Tipo Robo </mat-label>
+            <mat-select [(ngModel)]="robo.tipoRobo">
+              <mat-option *ngFor="let tipoRobo of tipoRobos" [value]="tipoRobo">{{tipoRobo}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </tr>
       </table>
     </div>
     <div>
-      <button class="buttonBack" (click)="goBack()">Back</button>
       <button (click)="createRobo()">Add</button>
+      <button class="buttonBack" (click)="goBack()">Back</button>
     </div>
-
-
-</div>
+  </div>
+</body>
