Adicionar backButton em tipoRobo

--- a/ui2/src/app/component/tipo-robo/tipo-robo-create/tipo-robo-create.component.html
+++ b/ui2/src/app/component/tipo-robo/tipo-robo-create/tipo-robo-create.component.html
@@ -30,6 +30,7 @@
         </div>
         <div>
             <button (click)="createTipoRobo()">Add</button>
+            <button class="buttonBack" (click)="goBack()">Back</button>
         </div>
     </div>
 </body>
