Adicionado planeamento ao front end

--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -65,7 +65,7 @@
   <!--Gestor de Tarefas Menu-->
   <button mat-button [matMenuTriggerFor]="gestorTarefasMenu">Gestor Tarefa</button>
   <mat-menu #gestorTarefasMenu="matMenu">
-    <button mat-menu-item (click)="createPiso()">Obter percurso entre dois edificios</button>
+    <button mat-menu-item (click)="calcularCaminho()">Obter percurso entre dois edificios</button>
     <button mat-menu-item (click)="createPiso()">Analise de complexidade</button>
   </mat-menu>
 
