Implementada a versão base do Thumb Raiser. UC601

--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -70,7 +70,7 @@
   </mat-menu>
 
   <!--Visualização-->
-  <button mat-button (click)="createEdificio()">Visualização</button>
+  <button mat-button (click)="viewer()">Visualização</button>
 
   <!--Asist Menu-->
   <button mat-button [matMenuTriggerFor]="asistMenu">Asist</button>
