Updated menu component #60

--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -59,7 +59,9 @@
   <mat-menu #roboMenu="matMenu">
     <button mat-menu-item (click)="createRobo()">Criar Robo</button>
     <button mat-menu-item (click)="listRobos()">Listar Robos</button>
+    <button mat-menu-item (click)="updateRobo()">Atualizar Robo</button>
     <button mat-menu-item (click)="inibirRobo()">Inibir Robo</button>
+    
   </mat-menu>
 
   <!--Gestor de Tarefas Menu-->
