Add SGRAI component to fe

--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -72,7 +72,7 @@
   </mat-menu>
 
   <!--Visualização-->
-  <button mat-button (click)="viewer()">Visualização</button>
+  <button mat-button (click)="view()">Visualização</button>
 
   <!--Asist Menu-->
   <button mat-button [matMenuTriggerFor]="asistMenu">Asist</button>
