Adicionar component mbco ao front end

--- a/ui2/src/app/component/main-menu/main-menu.component.html
+++ b/ui2/src/app/component/main-menu/main-menu.component.html
@@ -77,7 +77,7 @@
   <!--Asist Menu-->
   <button mat-button [matMenuTriggerFor]="asistMenu">Asist</button>
   <mat-menu #asistMenu="matMenu">
-    <button mat-menu-item (click)="createPiso()">MBCO</button>
+    <button mat-menu-item (click)="mbco()">MBCO</button>
     <button mat-menu-item (click)="createPiso()">Estratégia de recuperação de dados</button>
   </mat-menu>
 
